tests/expectations/compiler/interfaces/record_prototype_missing_dotdot_fail.out
Error [EPAR0370047]: expected `..`; fully constraining record fields in interfaces is not yet supported
    --> compiler-test:4:5
     |
   4 |     }
     |     ^
Warning [WPAR0370002]: Record prototype `Token` does not constrain any fields beyond the implicit `owner: address`. Consider simplifying to `record Token;`.
    --> compiler-test:2:1
     |
   2 | 
   3 |     record Token {
     |     ^^^^^^^^^^^^^^
   4 |         owner: address,
     |         ^^^^^^^^^^^^^^^
   5 |     }
     |     ^
